--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,15 @@ h1, h2, h3, h4, h5 {
     font-family: 'Abyssinica SIL';
 }
 
+p {
+    font-family: 'Roboto';
+    font-size: 1.17em;
+}
 h1 {
     color: #264653;
 }
 
 a {
     font-family: 'Roboto';
+    font-size: 1.17em;
 }
