--- a/week7/w7styles.css
+++ b/week7/w7styles.css
@@ -14,3 +14,11 @@ li {
     font-family: 'Roboto';
 }
 
+#ajax {
+    font-size: 1.7em;
+    color: #264653;
+}
+
+#ajax:hover {
+    color: #f77f00;
+}
