--- a/week8/transforms.css
+++ b/week8/transforms.css
@@ -1,3 +1,7 @@
+body {
+    text-align: center;
+}
+
 .article h1:hover span {
     color: #484848;  
     transform: rotate(10deg) translateX(40px) scale(1.5);
@@ -5,5 +9,6 @@
 }
 
 .article h1 span {
-    transition-property: transform;
+    -webkit-transition-property: -webkit-transform;
+    transition: transform 0.2s ease-out 50ms, color 0.1s linear 50ms;
 }
