--- a/week8/w8styles.css
+++ b/week8/w8styles.css
@@ -1,9 +1,9 @@
-#exercise {
+.exercise {
     font-size: 1.6em;
     color: #264653;
 }
 
-#exercise:hover {
+.exercise:hover {
     color: #f77f00;
 }
 
