--- a/weather_app/styles/large.css
+++ b/weather_app/styles/large.css
@@ -1,10 +1,16 @@
 @media only screen and (min-width: 50em) {
+    #weather-summary{
+        max-width: 58%;
+    }
     .forecastdiv {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         max-width: 90%;
         margin: 0 auto;
         margin-top: 4em;
+    }
+    .weather-li{
+        font-size: 1.4em;
     }
     .forecastdiv div{
         max-width: 100%;
@@ -19,5 +25,9 @@
     .button {
         width: 30px;
         height: 30px;
+    }
+    ul{
+        margin-left: 1em;
+        margin-right: 1em;
     }
 }
