--- a/cat_app/styles/small.css
+++ b/cat_app/styles/small.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 body {
-
-    margin: 10px auto;
+    margin: 0 auto;
     font-family: "Montserrat", sans-serif;
     background-color: #264653;
     color: white;
@@ -15,39 +14,55 @@ header {
     text-align: center;
 }
 header p {
-    font-size: 1.5em;
+    font-size: 0.9em;
 }
 h2 {
     border-bottom: 2px solid white;
+    font-size: 1.2rem;
+    padding-bottom: 0.3rem;
 }
 #selector {
-    display: inline;
-    font-size: 1.2em;
-    padding-left: 6em;
-    margin-top: 2em;
+    font-size: 0.9rem;
+    text-align: center;
 }
 select {
-    font-size: 1.2em;
-    margin-top: 2em;
+    display: block;
+    font-size: 0.9rem;
+    margin: 0 auto;
+    box-shadow: 0 1px 2px #2b2b2b;
+    background: #eee;
+    color: #0c5b78;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+select:active{
+    background-color: rgb(85, 121, 121);
+    transform-origin: center;
+    transform: scale(1.1);
+
 }
 #cats {
     margin: 0 auto;
     text-align: center;
     max-width: 85%;
+    padding-top: 2.3em;
 }
 
 #cats img{
-    max-width: 60%;
+    max-width: 68%;
     border-radius: 10px;
 }
 
 #cats p{
     max-width: 98%;
-    font-size: 1.2em;
+    font-size: 0.9rem;
+    padding-top: 1em;
 }
 footer {
     text-align: center;
     margin-top: 8em;
+    padding-bottom: 1em;
 }
 footer a{
     color: white;
