--- a/weather_app/styles/small.css
+++ b/weather_app/styles/small.css
@@ -7,6 +7,9 @@ body {
   background-size: cover;
   font-family: 'Roboto';
   color: white;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 #name {
   color: white;
@@ -22,7 +25,7 @@ body {
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  transition: 0.2s ease;
+  transition: 0.3s ease;
 }
 .button:active {
   background-color: #efa0b0;
@@ -146,4 +149,20 @@ ul {
   max-width: 12%;
   padding-right: 0.2rem;
   margin-bottom: -0.3rem;
+}
+
+footer{
+  background-color: #554e584c;
+  font-size: 1.2em;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: -0.5em;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
+}
+footer a{
+  color: #F9C80E;
+}
+footer a:hover{
+  color: #ffff;
 }
